Lint warning