@@ -41,7 +41,7 @@ public class TestProductBigSet extends TestCase {
 
   private void fillSet(SetBackedLockableBigSet<Integer> lbs, int factor) {
     for (int i = 0; i < 3; i++) {
-      lbs.add(new Integer((i + 1) * factor));
+      lbs.add(Integer.valueOf((i + 1) * factor));
     }
     lbs.lock();
   }
